--- a/account.html
+++ b/account.html
@@ -61,7 +61,7 @@
     const X = parseInt(xx.slice(0, 2)); // first two digits
     const Y = xx.slice(2, 4);           // last two digits
 
-    if (X === 0) return `BETA.${Y}.${zz}`;
+    if (X === 0) return `vBETA.${Y}.${zz}`;
     return `v${X}.${Y}.${zz}`;
 }
 
