--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
         return;
       }
 
-      const email = username + "@mysite.fake";
+      const email = username + "@maxiroon.xyz";
 
       try {
         await signInWithEmailAndPassword(auth, email, password);
